{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 11,
  "lineage": "fa5bc5ca-3a5d-ea98-7b01-0567e14436e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077efa5ed3d025550",
            "domain": "vpc",
            "id": "eipalloc-077efa5ed3d025550",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-67-96.compute-1.amazonaws.com",
            "public_ip": "3.212.67.96",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_custom_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694338052375:internet-gateway/igw-0a7e95b6e4d3d567e",
            "id": "igw-0a7e95b6e4d3d567e",
            "owner_id": "694338052375",
            "tags": {
              "Name": "my_custom_igw"
            },
            "tags_all": {
              "Name": "my_custom_igw"
            },
            "vpc_id": "vpc-042cc13474b339d58"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077efa5ed3d025550",
            "connectivity_type": "public",
            "id": "nat-0a9d465e327103cf3",
            "network_interface_id": "eni-0733c2f398c1dc175",
            "private_ip": "10.0.0.131",
            "public_ip": "3.212.67.96",
            "subnet_id": "subnet-023bfb94a22b2cd01"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_custom_private_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694338052375:route-table/rtb-0c0f059be9e17fbae",
            "id": "rtb-0c0f059be9e17fbae",
            "owner_id": "694338052375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a9d465e327103cf3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_routetable"
            },
            "tags_all": {
              "Name": "private_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-042cc13474b339d58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elasticip",
            "aws_nat_gateway.natgateway",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_custom_public_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694338052375:route-table/rtb-0b5dfbc4d4f055192",
            "id": "rtb-0b5dfbc4d4f055192",
            "owner_id": "694338052375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7e95b6e4d3d567e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_routetable"
            },
            "tags_all": {
              "Name": "public_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-042cc13474b339d58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_custom_igw",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001bfed0511cc7e54",
            "route_table_id": "rtb-0c0f059be9e17fbae",
            "subnet_id": "subnet-06265b5284cd0d6c2"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_nat_gateway.natgateway",
            "aws_route_table.my_custom_private_routetable",
            "aws_subnet.my_private_subnet",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0061760e762ca0865",
            "route_table_id": "rtb-0b5dfbc4d4f055192",
            "subnet_id": "subnet-023bfb94a22b2cd01"
          },
          "dependencies": [
            "aws_internet_gateway.my_custom_igw",
            "aws_route_table.my_custom_public_routetable",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694338052375:subnet/subnet-06265b5284cd0d6c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06265b5284cd0d6c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694338052375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-042cc13474b339d58"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694338052375:subnet/subnet-023bfb94a22b2cd01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023bfb94a22b2cd01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694338052375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-042cc13474b339d58"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:694338052375:vpc/vpc-042cc13474b339d58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065978db25e5eb779",
            "default_route_table_id": "rtb-0ad733f1f7d32bc23",
            "default_security_group_id": "sg-0af2b1a6897acda98",
            "dhcp_options_id": "dopt-0994856ebdd993638",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-042cc13474b339d58",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ad733f1f7d32bc23",
            "owner_id": "694338052375",
            "tags": {
              "Name": "my_custom_vpc"
            },
            "tags_all": {
              "Name": "my_custom_vpc"
            }
          }
        }
      ]
    }
  ]
}